syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "SceneInfo.proto";

// Cjdbiheodfa
message EnterChallengeNextPhaseScRsp {
    uint32 retcode = 3;
    SceneInfo scene = 15;
}