syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "SceneInfo.proto";

message RestartChallengePhaseScRsp {
	uint32 retcode = 3;
	SceneInfo scene = 9;
}